# Pairion-Node

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
animations/: README.md
models/: README.md
scripts/: lint-audio-no-disk-writes.sh  lint-single-binary-discipline.sh
sounds/: README.md
src/: lib.rs  main.rs
src/audio/: mod.rs
src/capabilities/: detector.rs  manifest.rs  mod.rs
src/config/: mod.rs
src/led/: animations.rs  controller.rs  mod.rs
src/logs/: mod.rs
src/offline/: mod.rs  state_machine.rs
src/pairing/: mod.rs  pair_code.rs  web_server.rs
src/secrets/: mod.rs
src/smart/: hailo_ffi.rs  mini_llm.rs  mod.rs  skill_invoker.rs  whisper_small.rs
src/sound/: cache.rs  mod.rs
src/vad/: mod.rs
src/wake/: mod.rs
src/ws/: client.rs  dispatch.rs  heartbeat.rs  identify.rs  messages.rs  mod.rs
systemd/: pairion-node.service
tests/: integration_test.rs
tests/harness/: mod.rs
