[package]
name = "pairion-node"
version = "0.1.0"
edition = "2021"
description = "Pairion ambient voice-first AI Node — runs on Raspberry Pi hardware"
license = "LicenseRef-Pairion-NC-1.0"
repository = "https://github.com/pairion/Pairion-Node"

[lib]
name = "pairion_node"
path = "src/lib.rs"

[[bin]]
name = "pairion-node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
